--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "alperenersoy/filament-export": "^3.0.3-beta",
         "coolsam/flatpickr": "^3.1",
         "devaslanphp/filament-avatar": "^1.0",
         "filament/filament": "^3.2",
